tests/ssa-tests/loops/diagnostics.out
tests/ssa-tests/loops/main.eon:5:9: error: This code is unreachable
  5 |         return 10;
    |         ^
tests/ssa-tests/loops/main.eon:13:5: error: This code is unreachable
  13 |     while 1 != 2
     |     ^